[tool.poetry]
name = "wavsurfer"
version = "0.1.0"
description = ""
authors = ["moreaupascal56 <moreaupascal56@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.14.1"
numpy = "^2.1.0"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
